<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
    >

    <Button
        android:id="@+id/btTestStringExtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_string_extras"
        />

    <Button
        android:id="@+id/btTestPrimaryTypeExtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_primary_type_extras"
        />

    <Button
        android:id="@+id/btTestParcelableExtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_parcelable_extras"
        />

    <Button
        android:id="@+id/btTestArrayExtras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_array_extras"
        />

    <Button
        android:id="@+id/btTestFragmentInject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_fragment_inject"
        />
</LinearLayout>