<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.tale.prettybundle.sample.TestParcelableActivity"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/person"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        >

        <TextView
            android:text="@string/lbl_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            />

        <TextView
            android:id="@+id/tvName"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="Name"
            />

        <TextView
            android:text="@string/lbl_age"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            />

        <TextView
            android:id="@+id/tvAge"
            android:layout_marginLeft="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            tools:text="18"
            />
    </GridLayout>

</RelativeLayout>
